--- a/api/package.json
+++ b/api/package.json
@@ -2,11 +2,11 @@
   "name": "api",
   "version": "0.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node api/server.js"
+    "server": "node api/index.js"
   },
   "author": {
     "name": "Kefton David",
