--- a/api/vercel.json
+++ b/api/vercel.json
@@ -4,8 +4,8 @@
         "runtime": "@vercel/node@1.15.3"
        } 
     },
-    "rewrites":{
+    "rewrites": [{
         "source": "/(.*)",
         "destination": "/api"
-    }
+    }]
 }
